Closed Bug 203422 Opened 23 years ago Closed 22 years ago

fix some build warnings in netwerk

Categories

(Core :: Networking, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.7alpha

People

(Reporter: jonwil, Assigned: jonwil)

References

(Blocks 1 open bug)

Details

Attachments

(5 obsolete files)

fix some warnings in netwerk (aka neko) which might be indicative of potential problems.
*** Bug 203423 has been marked as a duplicate of this bug. ***
Attached patch (Av1) patch (obsolete) — Splinter Review
patch to fix warnings If this patch is good, I will fix more similar warnings in other parts of the code (e.g. mailnews)
Attachment #121766 - Flags: superreview?
Attachment #121766 - Flags: review?(darin)
Comment on attachment 121766 [details] [diff] [review] (Av1) patch >Index: netwerk/streamconv/converters/nsBinHexDecoder.cpp >- if ((val = BHEXVAL(c)) == -1) >+ if ((val = BHEXVAL(c)) == PRUint32(-1)) > { stick with tabs here even though the file seems to use them inconsistently. >Index: netwerk/dns/src/nameprep.c > MAKE_NAMEPREP_HANDLE("nameprep-11", id11), >- { NULL, NULL, NULL }, >+ { NULL, NULL, NULL, NULL, NULL }, again, remember to conform to the indentation style of the file you are modifying. >Index: netwerk/dns/src/race.c > int bitlen = 0; >- int i, j; >+ unsigned int i, j; > size_t len; same indentation nit. sr=me with these nits addressed.
Attachment #121766 - Flags: review?(darin) → review-
Attached patch (Av1b) patch v2 (obsolete) — Splinter Review
Fixed tab stuff
Attachment #121766 - Attachment is obsolete: true
Attachment #122389 - Flags: review?(darin)
Comment on attachment 122389 [details] [diff] [review] (Av1b) patch v2 sr=darin
Attachment #122389 - Flags: review?(darin) → superreview+
Blocks: buildwarning
Attachment #121766 - Flags: superreview?
Attachment #121766 - Flags: review-
Attachment #122389 - Flags: review?(andreas.otte)
Attachment #122389 - Flags: review?(andreas.otte) → review+
Comment on attachment 122389 [details] [diff] [review] (Av1b) patch v2 'approval1.6=?': Trivial code cleanup. (if not too late)
Attachment #122389 - Flags: approval1.6?
Note: some of the fixes in this patch are already in
I'll post an updated past...
Attachment #121766 - Attachment description: patch → (Av1) patch
Attachment #122389 - Attachment description: patch v2 → (Av1b) patch v2
Attachment #122389 - Attachment is obsolete: true
Attachment #122389 - Flags: approval1.6?
Attachment #137615 - Attachment description: updated patch for reference → (Av2) updated patch for reference
Attachment #137615 - Attachment is obsolete: true
Attachment #137621 - Flags: superreview?(darin)
Attachment #137621 - Flags: review?(andreas.otte)
Attachment #137621 - Flags: review?(andreas.otte) → review+
Comment on attachment 137621 [details] [diff] [review] (Av2b) updated and enhanced patch [Check in: See (Av2c)] >Index: mozilla/netwerk/streamconv/converters/nsBinHexDecoder.cpp >- if ((val = BHEXVAL(c)) == -1) >+ if ((val = BHEXVAL(c)) == PRUint32(-1)) > { nit: fix indentation to be consistent (i.e., looks like you need to use tabs). sr=darin with that nit picked
Attachment #137621 - Flags: superreview?(darin) → superreview+
Comment on attachment 138560 [details] [diff] [review] (Av2c) updated and enhanced patch [Checked in: Comment 13] Check in: { 01/07/2004 15:43 neil%parkwaycc.co.uk }
Attachment #138560 - Attachment description: (Av2c) updated and enhanced patch → (Av2c) updated and enhanced patch [Checked in: Comment 13]
Attachment #138560 - Attachment is obsolete: true
Attachment #137621 - Attachment description: (Av2b) updated and enhanced patch → (Av2b) updated and enhanced patch [Check in: See (Av2c)]
Attachment #137621 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 22 years ago
Depends on: 205608, 217009, 221142
Resolution: --- → FIXED
Summary: fix some warnings in netwerk → fix some build warnings in netwerk
Target Milestone: --- → mozilla1.7alpha
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: