Bug 203422 fix some warnings in netwerk p=gautheri@noos.fr r=andreas.otte sr=darin